--- a/android/res/layout/fragment_home.xml
+++ b/android/res/layout/fragment_home.xml
@@ -1,74 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/card_detailing"
-    android:orientation="vertical"
-    tools:context=".ui.HomeFragment">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar" />
-
-
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/ll_livewallapper"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/card"
-            android:foreground="?selectableItemBackgroundBorderless"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="30dp">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_image" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="enterAlways"
+            app:navigationIcon="@drawable/ic_arrow"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Set LiveWallpaper"
-                android:textSize="18dp" />
+                android:text="@string/app_name"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+        </androidx.appcompat.widget.Toolbar>
 
-        </LinearLayout>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+           style="@style/Widget.App.Tabs"></com.google.android.material.tabs.TabLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <LinearLayout
-            android:id="@+id/ll_livewallapper_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/card"
-            android:foreground="?selectableItemBackgroundBorderless"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="30dp">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_settings" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Settings"
-                android:textSize="18dp" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
-</LinearLayout>
+    </androidx.viewpager.widget.ViewPager>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
