--- a/android/res/layout/toolbar.xml
+++ b/android/res/layout/toolbar.xml
@@ -5,9 +5,10 @@
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/appbar_padding_top"
-    android:theme="@style/AppTheme.AppBarOverlay"
-    tools:showIn="@layout/activity_bg_chooser">
+    android:background="?attr/colorPrimary"
+    tools:showIn="@layout/activity_bg_chooser"
+    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,6 +20,7 @@
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
         <TextView
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
