--- a/android/res/values/colors.xml
+++ b/android/res/values/colors.xml
@@ -1,3 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="ic_background_color">#FFFFFFFF</color>
+    <color name="colorAccent">#FF02B396</color>
+    <color name="colorPrimary">#252D37</color>
+    <color name="colorPrimaryDark">#1C212A</color>
+    <color name="transparent">#00000000</color>
+    <!-- card colors -->
+    <color name="card_background">#ffffff</color>
+    <color name="card_shadow_1">#d4d4d4</color>
+    <color name="card_shadow_2">#dddddd</color>
+    <color name="card_detailing">#eee</color>
+    <color name="black">#000</color>
+    <color name="white">#fff</color>
 </resources>
