--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -1,19 +1,42 @@
 <resources>
 
 
-
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
-    <style name="AppTheme.AppBarOverlay">
-    </style>
+
+    <style name="AppTheme.AppBarOverlay"></style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="AppTheme.PopupOverlay">
+
+    <style name="AppTheme.PopupOverlay"></style>
+
+    <style name="StickerPreviewButtonText" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="Widget" parent="AppTheme">
+
+    </style>
+    <style name="Widget.App.Tabs" parent="@style/AppTheme">
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabTextAppearance">@style/TextAppearance.Lmeter.Tab</item>
+        <item name="tabTextColor">#E9E9E9</item>
+    </style>
+
+    <style name="TextAppearance.Lmeter.Tab" parent="@style/TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">true</item>
     </style>
 
 </resources>
