--- a/android/res/xml/wallpaper.xml
+++ b/android/res/xml/wallpaper.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <wallpaper xmlns:android="http://schemas.android.com/apk/res/android"
-    android:settingsActivity="com.mygdx.game.ui.home.HomeActivity"
+    android:settingsActivity="ui.image_gallery.FullImageFragment"
     android:thumbnail="@drawable/ic_launcher" />
